<resources>
    <string name="app_name">FoodApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_home_fragment">Hello Home fragment</string>
    <string name="hello_favorites_fragment">Hello Favorites fragment</string>
    <string name="hello_categories_fragment">Hello Categories fragment</string>
    <string name="home">Home</string>
    <string name="favorites">Favorites</string>
    <string name="categories">Categories</string>
    <string name="text_content">What would you like to eat?</string>
    <string name="search">search</string>
    <string name="random_meal">Random Meal</string>
    <string name="over_popular_meals">Over popular meals</string>
    <string name="category">Category</string>
</resources>